--- a/package.json
+++ b/package.json
@@ -25,9 +25,11 @@
     "@nestjs/core": "^8.0.0",
     "@nestjs/mapped-types": "^1.0.0",
     "@nestjs/platform-express": "^8.0.0",
-    "@nestjs/swagger": "^5.0.4",
+    "@nestjs/platform-fastify": "^8.0.4",
+    "@nestjs/swagger": "^5.0.8",
     "class-transformer": "^0.4.0",
     "class-validator": "^0.13.1",
+    "fastify-swagger": "^4.8.3",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
